--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,11 @@ on:
 env:
   environment: "qa"
 
-jobs:
+permissions:
+  id-token: write
+  contents: read
+
+  jobs:
   Terraform-Deploy:
     runs-on: ubuntu-latest
     steps:
