--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,9 +20,8 @@ jobs:
           aws-region: "eu-west-2"
           role-to-assume: "arn:aws:iam::510769981514:role/GitHubActionsDeploymentRole"
 
-      - uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_wrapper: false
+      - name: Terraform Setup
+        uses: hashicorp/setup-terraform@v3
 
       - name: Terraform Init
         working-directory: terraform
